[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
numpy = "1.23.4"
matplotlib = "3.6.1"
pyqt6 = "6.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
